# chess-puzzle-ai-cli

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  LICENSE  PLANNING.md  README.md  cli_chess_summary.md  pyproject.toml
.gemini/: GEMINI.md  PLANNING.md
cli-chess-master/: README.md
cli-chess-master/src/cli_chess/core/game/: game_view_base.py
docs/: Makefile  conf.py  example.ipynb  make.bat
src/chess_puzzle_ai_cli/: __main__.py  chess_puzzle_ai_cli.py  puzzle_fetcher.py
src/chess_puzzle_ai_cli/cli_chess_ui/modules/board/: board_model.py  board_presenter.py  board_view.py
src/chess_puzzle_ai_cli/cli_chess_ui/utils/: common.py  config.py  logging.py  ui_common.py
src/chess_puzzle_ai_cli/modules/board/: board_model.py  board_presenter.py  board_view.py
src/chess_puzzle_ai_cli/modules/clock/: clock_model.py  clock_presenter.py  clock_view.py
src/chess_puzzle_ai_cli/puzzle/: puzzle_manager.py
src/chess_puzzle_ai_cli/tests/core/: test_main.py
src/chess_puzzle_ai_cli/tests/modules/board/: test_board_model.py  test_board_presenter.py
src/chess_puzzle_ai_cli/tests/modules/clock/: test_clock.py
src/chess_puzzle_ai_cli/utils/: common.py  config.py  logging.py  ui_common.py
tests/: test_chess_puzzle_ai_cli.py  test_cli_input.py  test_puzzle_fetcher.py  test_puzzle_manager.py
workflows/: ci-cd.yml
